fix brand on mobile

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -121,7 +121,7 @@
 .brand-row{
   .brand-box{
     max-width: 100%;
-    border: 1px solid #f2f2f2;
+    
     display: flex;
     align-items: center;
     padding: 5px;
@@ -134,8 +134,12 @@
     }
   }
   a{
-    font-size: var(--h4);
-    color: var(--primary);
+    font-size: 16px;
+    line-height: initial;
+    color: #666666;
+    .text-underline{
+      text-decoration: underline;
+    }
   }
 }
 header .top-bar{
